# static-program-analyzer

./: CMakeLists.txt  Contact.csv  README.md  Readme.txt
bonus/: Readme.txt
src/autotester/src/: TestWrapper.cpp  TestWrapper.h
src/integration_testing/: CMakeLists.txt
src/integration_testing/src/frontend_pkb/: TestFrontEndPKB.cpp
src/integration_testing/src/pkb_pql/evaluator_pattern_clauses/: TestPatternAssignEval.cpp  TestPatternIfEval.cpp  TestPatternWhileEval.cpp
src/integration_testing/src/pkb_pql/evaluator_suchthat_clauses/: TestAffectsEval.cpp  TestCalls.cpp  TestCallsStar.cpp  TestFollowsEval.cpp  TestFollowsStarEval.cpp  TestModifiesEval.cpp  TestNextEval.cpp  TestNextStarEval.cpp  TestParentEval.cpp  TestParentStarEval.cpp  TestUsesEval.cpp
src/integration_testing/src/pkb_pql/evaluator_with_clauses/: TestWithEval.cpp
src/integration_testing/src/pkb_pql/utils/: CompareVector.cpp  CompareVectors.h
src/spa/: CMakeLists.txt
src/spa/src/clauses/: AffectsClause.cpp  AffectsClause.h  AffectsStarClause.cpp  AffectsStarClause.h  CallsClause.cpp  CallsClause.h  CallsStarClause.cpp  CallsStarClause.h  Clause.cpp  Clause.h  FollowsClause.cpp  FollowsClause.h  FollowsStarClause.cpp  (+31 more)
src/unit_testing/: CMakeLists.txt
tests/: out_Sample.xml  run_all_tests.sh
tests/Iteration_1/: pattern_Modifies_Uses.xml  pattern_suchthat_clauses.xml  run_all_iter1_tests.sh
tests/Iteration_1/queries/: 4.pattern_suchthat_clauses_queries.txt  6.uncommon_invalid_queries.txt
tests/Iteration_2/: run_all_iter2_tests.sh
tests/Iteration_3/: run_all_iter3_tests.sh
(+119 files in other folders)
